services/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  ports:
    - protocol: TCP
      port: 8085
      name: http
  clusterIP: None
  type: ClusterIP
